# weblookrs

./: .gitignore  AmazonQ.md  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.amazonq/rules/cargo/: cargo.md
src/: capture.rs  lib.rs  main.rs
src/mcp/: actions.rs  client.rs  mock_sdk.rs  mod.rs  server.rs
tests/: mod.rs
tests/mcp/: mod.rs  test_client.rs  test_integration.rs  test_server.rs
